# openai_img_analysis

./: .gitignore  CLAUDE.md  README.md  TODO.md  payload.md  pyproject.toml  requirements.txt  run.py
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
USER-FILES/01.CONFIG/: config.yml  system_prompt.txt
src/: __init__.py
src/openai_image_analyzer/: __init__.py  __main__.py  analyzer.py
